<resources>
    <string name="app_name">Harjoitustyo2</string>
    <string name="title_activity_main_page">MainPage</string>
    <!-- Strings used for fragments for navigation -->
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="total">Total:</string>
    <string name="the_selected_starting_value_refers_to_the_average_of_finns">The selected starting value refers to the average of Finns.</string>
    <string name="pork_and_poultry">Pork and poultry</string>
    <string name="beef">Beef</string>
    <string name="fish_and_seafood">Fish and seafood</string>
    <string name="cheese">Cheese</string>
    <string name="dairy">Dairy</string>
    <string name="rice">Rice</string>
    <string name="vegetables_at_winter">Vegetables at winter</string>
    <string name="eggs">Eggs</string>
    <string name="diet">Diet</string>
    <string name="submit">Submit</string>
    <string name="meat">Meat:</string>
    <string name="plant">Plant:</string>
    <string name="dairy_2">Dairy:</string>
    <string name="food_consumption_habits_calculates_estimated_co2_emission_per_year">Food consumption habits - calculates estimated CO2 emission per year</string>
    <string name="to_weight_control">To weight control</string>
    <string name="to_climate_control">To climate control</string>
    <string name="to_risk_control">To risk control</string>
    <string name="title_activity_risk_control">RiskControl</string>
    <string name="graph">Graph</string>
    <string name="enter_how_much_you_have_drink_caffeine_drinks_today">Enter how much you have drink caffeine drinks today</string>
    <string name="insert_below_your_caffeine_drinks_consumption">Insert below your daily caffeine \ndrinks consumption</string>
    <string name="to_caffeine_control">To caffeine control</string>
    <string name="coffee_consumption">Cups of coffee</string>
    <string name="energy_drink_consumption">Litres of energy drink</string>
    <string name="lemonade_consumption">Litres of lemonade</string>
    <string name="coffee">Coffee:</string>
    <string name="energy_drink">Energy drink:</string>
    <string name="lemonade">Lemonade:</string>
    <string name="registration">Registration</string>
    <string name="name">Full name</string>
    <string name="email_address">Email</string>
    <string name="password">Password</string>
    <string name="passwordagain">Re-type password</string>
    <string name="height_cm">Height (cm)</string>
    <string name="weight_kg">Weight (kg)</string>
    <string name="register">Register</string>
    <string name="birth_year">Birth year</string>
    <string name="gender">Gender</string>
    <string name="male">Male       </string>
    <string name="female">Female</string>
    <string name="change">Change your password</string>
    <string name="newpassword">New password</string>
    <string name="newpassworda">Re-type new password</string>
    <string name="update">Update password</string>
    <string name="login">Login Health X</string>
    <string name="registernow">Not registered yet? Register now!</string>
    <string name="current_weight">Current weight:   </string>
    <string name="back">Back</string>
    <string name="enter_your_weight">Enter your weight</string>
    <string name="logo">Logo</string>
    <string name="username">Username</string>
</resources>