<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/primarylight"
    tools:context=".UpdatePassword">


    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="@string/change"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="#297720"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp" />

    <TextView
        android:id="@+id/nameView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:background="@drawable/custom"
        android:textStyle="bold"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/emailView"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="100dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:background="@drawable/custom"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/password"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/custom"
        android:textSize="15sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/newPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/newpassword"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="10dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/custom"
        android:textSize="15sp"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/newPassword2"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="@string/newpassworda"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="25dp"
        android:padding="15dp"
        android:inputType="textPassword"
        android:background="@drawable/custom"
        android:textSize="15sp"
        android:importantForAutofill="no" />


    <Button
        android:id="@+id/update"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/btn_custom"
        android:text="@string/update"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:backgroundTint="@color/greendark" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/btn_custom"
        android:text="@string/back"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:backgroundTint="@color/green" />


</LinearLayout>